# tap-typeform

./: pyproject.toml
tap_typeform/: streams.py
