[tool.poetry]
name = "tap-typeform"
version = "0.0.1"
description = "`tap-typeform` is a Singer tap for Typeform, built with the Meltano SDK for Singer Taps."
authors = ["Albert Marrero"]
keywords = [
    "ELT",
    "Typeform",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8"
requests = "^2.25.1"
singer-sdk = "~=0.35.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.2"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.25.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-typeform = 'tap_typeform.tap:TapTypeform.cli'
